fix: grantee feedback

--- a/data/blog/0xB10C-receives-lts-grant.mdx
+++ b/data/blog/0xB10C-receives-lts-grant.mdx
@@ -21,8 +21,8 @@ problem in the spring of 2023.
 Our grant will further assist him in reviewing and testing Bitcoin Core PRs from
 a data-driven approach, ensuring informed decision-making and validating
 proposed changes with real-world testing. Additionally, it will support the
-publication of a v1.0 for projects like [fork-observer](https://fork.observer/)
-and [addrman-observer](https://addrman.observer/).  
+development of projects like [fork-observer](https://fork.observer/) and
+[addrman-observer](https://addrman.observer/).  
 
 The support of this grant will also help increase the visibility of his work
 through his blog and observation posts. These not only raise awareness of
