fix: feedback from grantee

--- a/data/blog/0xB10C-receives-lts-grant.mdx
+++ b/data/blog/0xB10C-receives-lts-grant.mdx
@@ -14,9 +14,12 @@ notably the Bitcoin Core tracing framework, providing detailed insights into
 network activities.
 
 His [miningpool-observer](https://miningpool.observer/) and
-[peer-observer](https://github.com/0xB10C/peer-observer) projects played a
-pivotal role in identifying and testing a fix for an undisclosed P2P network
-problem in the spring of 2023.
+[peer-observer](https://github.com/0xB10C/peer-observer) projects are pivotal in
+his various research pieces and observations, such as [linking bitcoin
+transactions to IPs][ips] and [finding missing transactions][txs].
+
+[ips]: https://b10c.me/observations/06-linkinglion/
+[txs]: https://b10c.me/observations/08-missing-sanctioned-transactions/
 
 Our grant will further assist him in reviewing and testing Bitcoin Core PRs from
 a data-driven approach, ensuring informed decision-making and validating
