--- a/data/blog/0xB10C-receives-lts-grant.mdx
+++ b/data/blog/0xB10C-receives-lts-grant.mdx
@@ -3,7 +3,7 @@ title: "Long-Term Support For 0xB10C"
 date: '2024-02-06'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
-authors: ['cfunk', 'dergigi']
+authors: ['cfunk', 'arvin']
 images: ['/static/images/blog/23-0xB10C.jpg']
 summary: "OpenSats Welcomes 0xB10C as an LTS Grantee."
 ---
