feat(about): update roles of ppl

--- a/data/authors/abitcoinperson.mdx
+++ b/data/authors/abitcoinperson.mdx
@@ -8,6 +8,7 @@ twitter: https://twitter.com/abitcoinperson
 nostr: npub1jkmthefasx53u36lhzu2g7x3jwlapf235435svl2mx0tjchp57vsvvcrvd
 github: https://github.com/abitcoinperson
 board: true
+ops: true
 ---
 
 Ben is a Bitcoiner. He started [OpenSats](https://opensats.org/), a 100%
