--- a/data/authors/charles.mdx
+++ b/data/authors/charles.mdx
@@ -4,7 +4,7 @@ nym: charles
 avatar: /static/images/ops/charles.jpg
 occupation: Chief Fiat Officer
 company: OpenSats
-ops: true
+volunteer: true
 ---
 
 Charles might strike the uninitiated as a very boring man. As the son of an
