--- a/data/authors/charles.mdx
+++ b/data/authors/charles.mdx
@@ -13,8 +13,7 @@ spreadsheets and paper-pushing. But he is not a boring man. He has a very
 particular set of skills; skills he has acquired over a very long career. Skills
 that make him effective at navigating the nightmare of bureaucracy.
 
-As Chief Fiat Officer, Charles takes care of (surprise, surprise!) the "fiat" side
-of the initiative. He is currently sitting in an undisclosed location pushing
+As a volunteer, he is currently sitting in an undisclosed location pushing
 papers from the left side of his desk to the right side of his desk, while also
 pushing Bitcoin and freedom-tech forward by providing his fiat expertise to
 OpenSats.
@@ -23,4 +22,4 @@ He is a professional when it comes to navigating the old world; the world that
 honors hand-written signatures over cryptographic ones; the world that accepts
 documents only if they are faxed via an ancient, government-approved machine. We
 are working towards making that world obsolete; but until we do, organizations
-like us need people like Charles.
+like us need help from people like Charles.
