--- a/data/authors/ace.mdx
+++ b/data/authors/ace.mdx
@@ -1,16 +1,16 @@
 ---
-name: Addison
+name: Ace
 nym: BitcoinPrecept
-avatar: /static/images/volunteers/addison.jpg
+avatar: /static/images/volunteers/ace.jpg
 occupation: Volunteer
 company: OpenSats
-email: addison@opensats.org
+email: ace@opensats.org
 nostr: npub1d9vusz3zdd3cp2nqfdhqv932a2e20nvkhnkngjmjepzs0fr72s2qdlzk2u
 github: https://github.com/bitcoinprecept
 volunteer: true
 ---
 
-Addison has served as a volunteer PM to the Bitcoin Product Community and FOSS
+Ace has served as a volunteer PM to the Bitcoin Product Community and FOSS
 contributor to the Seedsigner open-source project. Giving energy to the OpenSats
 mission is simply a continuation of those efforts to support development of
 Bitcoin and other tools of cryptographic self-sovereignty.
