--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -41,6 +41,7 @@ as in the internal and external processes of our organization.
 
 - [2023-Q2](/docs/minutes/2023-Q2.pdf)
 - [2023-Q3](/docs/minutes/2023-Q3.pdf)
+- [2023-Q4](/docs/minutes/2023-Q4.pdf)
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
