--- a/data/authors/j9.mdx
+++ b/data/authors/j9.mdx
@@ -102,4 +102,4 @@ Dn4ov1TIyu+YPqvTKqLrK2NeicLfEXwqCZ516iPoipN+w/oNhGO6fwhn0+Y=
 ```
 
 [tmibp]: https://enegnei.github.io/This-Month-In-Bitcoin-Privacy/
-[cbdc]: https://cbdchumanrights.org/
+[cbdc]: https://cbdctracker.hrf.org/fellows
