Insert ToC and donate button

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -12,21 +12,24 @@ As Bitcoin is approaching its next halving event, developers all over the world 
 
 Our board has selected nine more projects for funding. In no particular order, here they are:
 
-- [Splicing in LDK](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.z03co8f3uhtv)
-- [Bitcoin Core Testing Suite](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.pphmn292m5so)
-- [BLAST](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.ykpsb86jc0xq)
-- [Scaling Lightning](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.pignzmkaz8me)
-- [Satsigner](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.um15tnd4flme)
-- [Firebolt](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.j1wz8utv1yqu)
-- [The Bitaxe](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.c5j8eptrjjtf)
-- [The Bitcoin LARP Game](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.rqhd6awjurgz)
-- [Braidpool](https://docs.google.com/document/d/1uNqoDnbf5bJtcB1cqP9xSGgLUtX1QoZn68oW8tzqzuA/edit#heading=h.kssabwpcuiie)
+- [Splicing in LDK](#splicing-in-ldk)
+- [Bitcoin Core Testing Suite](#bitcoin-core-testing-suite)
+- [Open-Source Bitcoin LARP Game](#open-source-bitcoin-larp-game)
+- [Satsigner](#satsigner)
+- [The Bitaxe](#the-bitaxe)
+- [Scaling Lightning](#scaling-lightning)
+- [Braidpool](#braidpool)
+- [Firebolt](#firebolt)
+- [BLAST](#blast)
+
 
 All of the above grants are sourced from our [General Fund](https://opensats.org/projects/general_fund), which is funded by generous donors like you. If you want to help us support free and open-source projects please consider donating to the fund:
 
-BIG ORANGE BUTTON
+<center>
+    <DonateToGeneralFundButton/>
+</center>
 
-—
+---
 
 This marks the fourth wave of grants given to bitcoin projects, following our announcements in [July](https://opensats.org/blog/bitcoin-grants-july-2023), [August](https://opensats.org/blog/bitcoin-and-nostr-grants-august-2023), and [December](https://opensats.org/blog/bitcoin-grants-december-2023). In case you’re interested in the types of projects and people we support, we encourage you to have a look at our [long-term support grants](https://opensats.org/tags/lts) as well as our [year in review](https://opensats.org/blog/2023-year-in-review).
 
