Insert "Donate to Ops" button

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -124,3 +124,7 @@ License: GPL 3.0
 We are evaluating applications based on carefully [defined criteria](https://opensats.org/apply#criteria) and we do our best to select only the [most impactful](https://opensats.org/selection) and promising proposals.
 
 Thank you for your continual and generous support. As we don't take a cut from donations to open-source projects, we couldn't be doing what we are doing without your help. If you want to help us cover our operational expenses, please consider donating to our [operations budget](https://opensats.org/projects/opensats_operations_budget).
+
+<center>
+    <DonateToOperationsButton/>
+</center>
